fix: make gap more opinionated

--- a/packages/components/src/Grid/Grid.css
+++ b/packages/components/src/Grid/Grid.css
@@ -2,3 +2,13 @@
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
+
+.gap {
+  gap: var(--space-small);
+}
+
+@media (--medium-screens-and-up) {
+  .gap {
+    gap: var(--space-base);
+  }
+}
